--- a/index.html
+++ b/index.html
@@ -595,7 +595,10 @@
               </div>
             </div>
 			
-			<p class="footer__link footer_Copyright">Powered by: Motion Media Agency, Copyright © 2022</p>
+			<div class="footer__container container grid" style="align-content: center; justify-content: center;">
+				<p class="footer__link footer_Copyright">Powered by: Motion Media Agency, Copyright © 2022</p>
+			</div>
+			
         </footer>
 
 
